--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -8,18 +8,27 @@
   display: flex;
   flex-direction: column;
   gap: 7px;
+  max-width: 60%;
+}
+
+.profile__name-container {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
 }
 
 .profile__name {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   margin: 0;
-  gap: 10px;
+
   font-size: 42px;
   font-weight: 500;
   line-height: 1.15;
   transition: font-size 0.2s;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-name-button {
@@ -46,6 +55,10 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 1.2;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__add-button {
@@ -95,9 +108,16 @@
     margin: 0 auto;
     gap: 30px;
   }
+
   .profile__info {
     gap: 14px;
     padding-bottom: 6px;
+    max-width: 100%;
+  }
+
+  .profile__name-container {
+    display: flex;
+    justify-content: center;
   }
 
   .profile__name {
@@ -106,7 +126,9 @@
   }
 
   .profile__edit-name-button {
+    width: 18px;
     padding: 10px;
+    background-size: 7.5px;
   }
 
   .profile__job {
